--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,7 +1,4 @@
-.sass-cache/
-*.css.map
-*.sass.map
-*.scss.map
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
